[GEOS-11496] csw: improve handling of indexes in mapping and queryables (fix)